--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,81 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+	size: cover;
+	background-color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#header{
+	padding-top: 10px;
+	text-align: center;
+	color: #F2A59B;
+	font-weight: bold;
 }
+.sub{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	top: 0;
+	padding: 5px;
+	padding-right: 20px;
+	position: sticky;
+	color: #F2A59B;
+	font-weight: bold;
+	background-color: #E5E3E4;
+
+}
+.wrapper{
+	display: flex;
+	flex-direction: row;
+}
+
+.window{
+	border-radius: 3px;
+	border: 3px solid black;
+	margin: 20px;
+	box-sizing: border-box;
+	overflow: scroll;
+	width: 50%;
+	height: 85vh;
+}
+
+.right{
+	background-color: #F5F5F8;
+}
+
+form{
+	height: 100%;
+	
+}
+
+textarea{
+	border: none;
+	text-align: left;
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+	background-color: #F5F5F8;
+	margin-top: -1px;
+	margin-bottom: -1px;
+}
+
+textarea:focus {
+	outline: none;
+	background-color: white;
+}
+
+button{
+	background-color: none;
+	background: none;
+	border: none;
+	transition: 0.3s;
+}
+
+button:hover{
+	transform: scale(1.1);
+	
+}
+
+
+
+	
+
+
